@@ -1,3 +1,5 @@
+require 'active_record/version'
+
 module ActiveRecord
   module ConnectionAdapters
     module SQLServerActiveRecordExtensions
@@ -85,45 +87,47 @@ ActiveRecord::Base.send :include, ActiveRecord::ConnectionAdapters::SQLServerAct
 
 
 
-require 'active_record/associations'
+if ActiveRecord::VERSION::MAJOR == 2 && ActiveRecord::VERSION::MINOR >= 3
 
-module ActiveRecord
-  module ConnectionAdapters
-    module SQLServerJoinAssociationChanges
-      
-      def self.included(klass)
-        klass.class_eval do
-          include InstanceMethods
-          alias_method_chain :aliased_table_name_for, :sqlserver_support
-        end
-      end
-      
-      module InstanceMethods
+  require 'active_record/associations'
+  module ActiveRecord
+    module ConnectionAdapters
+      module SQLServerJoinAssociationChanges
         
-        protected
-        
-        # An exact copy, except this method has a Regexp escape on the quoted table name.
-        def aliased_table_name_for_with_sqlserver_support(name,suffix=nil)
-          if !parent.table_joins.blank? && parent.table_joins.to_s.downcase =~ %r{join(\s+\w+)?\s+#{Regexp.escape(active_record.connection.quote_table_name(name.downcase))}\son}i
-            @join_dependency.table_aliases[name] += 1
+        def self.included(klass)
+          klass.class_eval do
+            include InstanceMethods
+            alias_method_chain :aliased_table_name_for, :sqlserver_support
           end
-          unless @join_dependency.table_aliases[name].zero?
-            # if the table name has been used, then use an alias
-            name = active_record.connection.table_alias_for "#{pluralize(reflection.name)}_#{parent_table_name}#{suffix}"
-            table_index = @join_dependency.table_aliases[name]
-            @join_dependency.table_aliases[name] += 1
-            name = name[0..active_record.connection.table_alias_length-3] + "_#{table_index+1}" if table_index > 0
-          else
-            @join_dependency.table_aliases[name] += 1
-          end
-          name
         end
         
+        module InstanceMethods
+          
+          protected
+          
+          # An exact copy, except this method has a Regexp escape on the quoted table name.
+          def aliased_table_name_for_with_sqlserver_support(name,suffix=nil)
+            if !parent.table_joins.blank? && parent.table_joins.to_s.downcase =~ %r{join(\s+\w+)?\s+#{Regexp.escape(active_record.connection.quote_table_name(name.downcase))}\son}i
+              @join_dependency.table_aliases[name] += 1
+            end
+            unless @join_dependency.table_aliases[name].zero?
+              # if the table name has been used, then use an alias
+              name = active_record.connection.table_alias_for "#{pluralize(reflection.name)}_#{parent_table_name}#{suffix}"
+              table_index = @join_dependency.table_aliases[name]
+              @join_dependency.table_aliases[name] += 1
+              name = name[0..active_record.connection.table_alias_length-3] + "_#{table_index+1}" if table_index > 0
+            else
+              @join_dependency.table_aliases[name] += 1
+            end
+            name
+          end
+          
+        end
+        
       end
-      
     end
   end
-end
+  ActiveRecord::Associations::ClassMethods::JoinDependency::JoinAssociation.send :include, ActiveRecord::ConnectionAdapters::SQLServerJoinAssociationChanges
 
-ActiveRecord::Associations::ClassMethods::JoinDependency::JoinAssociation.send :include, ActiveRecord::ConnectionAdapters::SQLServerJoinAssociationChanges
+end
 
